--- a/includes/SplunkSetup/TA-TOMB/default/props.conf
+++ b/includes/SplunkSetup/TA-TOMB/default/props.conf
@@ -66,6 +66,10 @@ description = TOMB EventLog module output
 disabled = false
 
 pulldown_type = true
+EVAL-PID = tonumber(ProcessId,16)
+FIELDALIAS-EventId = id AS EventId
+FIELDALIAS-Computer = WorkstationName AS Computer
+
 
 
 
@@ -90,6 +94,20 @@ description = TOMB Signatures module output
 disabled = false
 
 pulldown_type = true
+EXTRACT-file_name = ^[^:\n]*:\s+(?P<file_name>[^,]+)
+
+EXTRACT-signature = ^(?:[^ \n]* ){4}(?P<signature>[^,]+)
+
+EXTRACT-vendor = ^(?:[^ \n]* ){6}(?P<vendor>[^,]+)
+
+EXTRACT-status = ^(?:[^ \n]* ){9}(?P<status>[^,]+)
+EXTRACT-sha1 = 
+^(?:[^:\n]*:){6}\s+(?P<sha1>[^,]+)
+
+EXTRACT-md5 = ^(?:[^:\n]*:){7}\s+(?P<md5>[^,]+)
+
+EXTRACT-file_version = ^(?:[^:\n]*:){8}\s+(?P<file_version>\d+\.\d+\.\d+\.\d+\s+\(\w+\d+_\w+\.\d+\-\d+\))
+
 
 
 
