--- a/includes/SplunkSetup/TA-TOMB/default/props.conf
+++ b/includes/SplunkSetup/TA-TOMB/default/props.conf
@@ -20,6 +20,76 @@ description = TOMB Process module output
 pulldown_type = true
 
 
+# CONVERSIONS TO CIM COMPLIANCE:
+FIELDALIAS-cs_creation_class_name = CSCreationClassName AS cs_creation_class_name
+FIELDALIAS-workstation = CSName AS workstation
+FIELDALIAS-caption = Caption AS caption
+FIELDALIAS-command_line = CommandLine AS command_line
+FIELDALIAS-creation_class_name = CreationClassName AS creation_class_name
+FIELDALIAS-creation_date = CreationDate AS creation_date
+FIELDALIAS-description = Description AS description
+FIELDALIAS-execution_state = ExecutionState AS execution_state
+FIELDALIAS-handle = Handle AS handle
+FIELDALIAS-handle_count  = HandleCount AS handle_count
+FIELDALIAS-handles = Handles AS handles
+FIELDALIAS-install_date = InstallDate AS install_date
+FIELDALIAS-max_working_set = MaximumWorkingSetSize AS max_working_set
+FIELDALIAS-min_working_set = MinimumWorkingSetSize AS min_working_set
+FIELDALIAS-process_name = Name AS process_name
+FIELDALIAS-computer_name = PSComputerName AS computer_name
+FIELDALIAS-page_faults = PageFaults AS page_faults
+FIELDALIAS-page_file_usage = PageFileUsage AS page_file_usage
+FIELDALIAS-parent_process_id = ParentProcessId AS parent_process_id
+FIELDALIAS-peak_page_file_usage = PeakPageFileUsage AS peak_page_file_usage
+FIELDALIAS-peak_virtual_size = PeakVirtualSize AS peak_virtual_size
+FIELDALIAS-peak_working_set = PeakWorkingSetSize AS peak_working_set
+FIELDALIAS-priority = Priority AS priority
+FIELDALIAS-private_page_count = PrivatePageCount AS private_page_count
+FIELDALIAS-process_id = ProcessId AS process_id
+FIELDALIAS-process_name = ProcessName AS process_name
+FIELDALIAS-quota_nonpaged_usage = QuotaNonPagedPoolUsage AS quota_nonpaged_usage
+FIELDALIAS-quota_paged_usage = QuotaPagedPoolUsage AS quota_paged_usage
+FIELDALIAS-quota_peak_nonpaged_usage = QuotaPeakNonPagedPoolUsage AS quota_peak_nonpaged_usage
+FIELDALIAS-quota_peak_paged_usage = QuotaPeakPagedPoolUsage AS quota_peak_paged_usage
+FIELDALIAS-status = Status AS status
+FIELDALIAS-termination_date = TerminationDate AS termination_date
+FIELDALIAS-thread_count = ThreadCount AS thread_count
+FIELDALIAS-version = WindowsVersion AS version
+# FIELD CONVERSIONS TO READABLE VALUES:
+EVAL-CSCreationClassName = null
+EVAL-CSName = null
+EVAL-Caption = null
+EVAL-CommandLine = null
+EVAL-CreationClassName = null
+EVAL-CreationDate = null
+EVAL-Description = null
+EVAL-ExecutionState = null
+EVAL-Handle = null
+EVAL-HandleCount = null
+EVAL-Handles = null
+EVAL-InstallDate = null
+EVAL-MaximumWorkingSetSize = null
+EVAL-MinimumWorkingSetSize = null
+EVAL-Name = null
+EVAL-PSComputerName = null
+EVAL-PageFaults = null
+EVAL-PageFileUsage = null
+EVAL-ParentProcessId = null
+EVAL-PeakPageFileUsage = null
+EVAL-PeakVirtualSize = null
+EVAL-PeakWorkingSetSize = null
+EVAL-Priority = null
+EVAL-PrivatePageCount = null
+EVAL-ProcessId = null
+EVAL-ProcessName = null
+EVAL-QuotaNonPagedPoolUsage = null
+EVAL-QuotaPagedPoolUsage = null
+EVAL-QuotaPeakNonPagedPoolUsage = null
+EVAL-QuotaPeakPagedPoolUsage = null
+EVAL-Status = null
+EVAL-TerminationDate = null
+EVAL-ThreadCount = null
+EVAL-WindowsVersion = null
 
 [TOMB_Service_Json]
 
@@ -44,6 +114,65 @@ disabled = false
 pulldown_type = true
 
 
+# FIELD CONVERSIONS TO READABLE VALUES:
+FIELDALIAS-accept_pause = AcceptPause AS accept_pause
+FIELDALIAS-accept_stop = AcceptStop AS accept_stop
+FIELDALIAS-caption = Caption AS caption
+FIELDALIAS-check_point = CheckPoint AS check_point
+FIELDALIAS-container = Container AS container
+FIELDALIAS-creation_class_name = CreationClassName AS creation_class_name
+FIELDALIAS-delayed_auto_start = DelayedAutoStart AS delayed_auto_start
+FIELDALIAS-description = Description AS description
+FIELDALIAS-desktop_interact = DesktopInteract AS desktop_interact
+FIELDALIAS-display_name = DisplayName AS display_name
+FIELDALIAS-error_control = ErrorControl AS error_control
+FIELDALIAS-exit_code = ExitCode AS exit_code
+FIELDALIAS-install_date = InstallDate AS install_date
+FIELDALIAS-process_name = Name AS process_name
+FIELDALIAS-computer_name = PSComputerName AS computer_name
+FIELDALIAS-file_path = PathName AS file_path
+FIELDALIAS-process_id = ProcessId AS process_id
+FIELDALIAS-service_exit_code = ServiceSpecificExitCode AS service_exit_code
+FIELDALIAS-service_type = ServiceType AS service_type
+FIELDALIAS-site = Site AS site
+FIELDALIAS-start_mode = StartMode AS start_mode
+FIELDALIAS-parent_process_name = StartName AS parent_process_name
+FIELDALIAS-started = Started AS started
+FIELDALIAS-state = State AS state
+FIELDALIAS-status = Status AS status
+FIELDALIAS-system_creation_class = SystemCreationClassName AS system_creation_class
+FIELDALIAS-workstation = SystemName AS workstation
+FIELDALIAS-tag_id = TagId AS tag_id
+FIELDALIAS-wait_hint = WaitHint AS wait_hint
+# FIELD CONVERSIONS TO READABLE VALUES:
+EVAL-AcceptPause = null
+EVAL-AcceptStop = null
+EVAL-Caption = null
+EVAL-CheckPoint = null
+EVAL-Container = null
+EVAL-CreationClassName = null
+EVAL-DelayedAutoStart = null
+EVAL-DisplayName = null
+EVAL-ErrorControl = null
+EVAL-ExitCode = null
+EVAL-InstallDate = null
+EVAL-Name = null
+EVAL-PSComputerName = null
+EVAL-PSShowComputerName = null
+EVAL-PathName = null
+EVAL-ProcessId = null
+EVAL-ServiceSpecificExitCode = null
+EVAL-ServiceType = null
+EVAL-Site = null
+EVAL-StartMode = null
+EVAL-StartName = null
+EVAL-Started = null
+EVAL-State = null
+EVAL-Status = null
+EVAL-SystemCreationClassName = null
+EVAL-SystemName = null
+EVAL-TagId = null
+EVAL-WaitHint = null
 
 [TOMB_EventLog_Json]
 
@@ -66,6 +195,7 @@ description = TOMB EventLog module output
 disabled = false
 
 pulldown_type = true
+# CONVERSIONS TO CIM COMPLIANCE:
 FIELDALIAS-event_id = id AS event_id
 FIELDALIAS-access_list = AccessList AS access_list
 
@@ -272,6 +402,7 @@ FIELDALIAS-app_file_name = Application AS file_name
 FIELDALIAS-image_file_name = ImagePath AS file_name
 FIELDALIAS-parent_file_name = ParentProcessName AS parent_file_name
 FIELDALIAS-parent_file_path = ParentProcessName AS parent_process_path
+# FIELD CONVERSIONS TO READABLE VALUES:
 EVAL-auth_level = if (EventID==5712, param12, null())
 
 EVAL-auth_service = if (EventID==5712, param11, null())
@@ -300,36 +431,6 @@ EVAL-service_state = if (EventID==7036, param2, null())
 
 EVAL-times_repeated = if (EventID==7034, param2, null())
 
-EVAL-parent_process_id = coalesce(case(EventID==4688,tonumber(ProcessId,16)),parent_process_id)
-
-EVAL-parent_command_line = coalesce(case(EventID==4688,tonumber(ParentCommandLine,16)),parent_command_line)
-
-EVAL-service_name = coalesce(case(EventID==7034,param1, \
-
-                                  EventID==7036,param1, \
-
-                                  EventID==7040,param1), \
-
-                             service_name)
-
-EVAL-service_start_type = coalesce (case (EventID==7040,param2, \
-
-                                          EventID==7045,StartType), \
-
-                                    service_start_type)
-
-EVAL-sid = coalesce(case(EventID==4688,SubjectUserSid),sid)
-
-EVAL-target_sid = coalesce(case(EventID==4624,TargetUserSid, \
-
-                                EventID==4625,TargetUserSid, \
-
-                                EventID==4688,TargetUserSid, \
-
-                                EventID==4798,TargetUserSid), \
-
-                           target_sid)
-
 EVAL-user = coalesce(case(EventID==4688,SubjectDomainName + "\\" + SubjectUserName,EventID==4624,TargetDomainName + "\\" + TargetUserName),user)
 
 EVAL-logon_id = coalesce(case(EventID==4688,SubjectLogonId,EventID==4624,TargetLogonId),logon_id)
@@ -345,6 +446,112 @@ EVAL-dest = coalesce(case(EventID==5156,DestAddress),dest)
 EVAL-dest_ip = coalesce(case(EventID==5156,DestAddress),dest_ip)
 
 EVAL-dest_port = coalesce(case(EventID==5156,DestPort),dest_port)
+# SET ORIGINAL VALUES TO NULL, REMOVES NON CIM COMPLIANCE
+EVAL-id = null
+EVAL-AccessList = null
+EVAL-AccessMask = null
+EVAL-AccessRight = null
+EVAL-Accesses = null
+EVAL-AccountExpires = null
+EVAL-AccountName = null
+EVAL-LogonHours = null
+EVAL-AllowedToDelegateTo = null
+EVAL-PackageName = null
+EVAL-AuthenticationPackageName = null
+EVAL-CommandLine = null
+EVAL-WorkstationName = null
+EVAL-TimeCreated = null
+EVAL-DisplayName = null
+EVAL-DnsHostName = null
+EVAL-DomainName = null
+EVAL-DomainSid = null
+EVAL-ElevatedToken = null
+EVAL-FailureReason = null
+EVAL-TargetDomainName = null
+EVAL-TargetUserName = null
+EVAL-HandleId = null
+EVAL-HomeDirectory = null
+EVAL-HomePath = null
+EVAL-ImpersonationLevel = null
+EVAL-KeyLength = null
+EVAL-Level = null
+EVAL-LogonGuid = null
+EVAL-LogonProcessName = null
+EVAL-LogonStatus = null
+EVAL-LogonType = null
+EVAL-MemberName = null
+EVAL-MemberSid = null
+EVAL-NewValueType = null
+EVAL-NewValue = null
+EVAL-NewSd = null
+EVAL-NewUacValue = null
+EVAL-LmPackageName = null
+EVAL-ObjectName = null
+EVAL-ObjectServer = null
+EVAL-ObjectType = null
+EVAL-ObjectValueName = null
+EVAL-OldSd = null
+EVAL-OldUacValue = null
+EVAL-OldValue = null
+EVAL-OldValueType = null
+EVAL-OperationType = null
+EVAL-ParentFileName = null
+EVAL-PasswordLastSet = null
+EVAL-PrimaryGroupId = null
+EVAL-Status = null
+EVAL-ProfileChanged = null
+EVAL-ProfilePath = null
+EVAL-ProviderName = null
+EVAL-EventRecordID = null
+EVAL-RestrictedAdminMode = null
+EVAL-RuleId = null
+EVAL-RuleName = null
+EVAL-SamAccountName = null
+EVAL-TaskContent = null
+EVAL-TaskName = null
+EVAL-ScriptPath = null
+EVAL-ServiceAccount = null
+EVAL-ServiceFileName = null
+EVAL-ServiceName = null
+EVAL-ServicePrincipleName = null
+EVAL-ServiceStartType = null
+EVAL-ServiceType = null
+EVAL-ShareName = null
+EVAL-ShareLocalPath = null
+EVAL-SidFilteringEnabled = null
+EVAL-SidHistory = null
+EVAL-IpAddress = null
+EVAL-IpPort = null
+EVAL-SubjectDomainName = null
+EVAL-SubjectLogonId = null
+EVAL-SubjectLogonProcess = null
+EVAL-SubjectLogonType = null
+EVAL-SubjectUserSid = null
+EVAL-SubjectUserName = null
+EVAL-TargetDomainName = null
+EVAL-TargetLinkedLogonId = null
+EVAL-TargetLogonId = null
+EVAL-TargetOutboundUserDomain = null
+EVAL-TargetOutboundUserName = null
+EVAL-TargetUserSid = null
+EVAL-TargetUserName = null
+EVAL-TokenElevationType = null
+EVAL-TransmittedServices = null
+EVAL-TdoAttributes = null
+EVAL-TdoDirection = null
+EVAL-TdoType = null
+EVAL-UserAccountControl = null
+EVAL-UserParameters = null
+EVAL-UserPrincipalName = null
+EVAL-PrivilegeList = null
+EVAL-UserWorkstations = null
+EVAL-VirtualAccount = null
+EVAL-ProcessName = null
+EVAL-NewProcessName = null
+EVAL-CallerProcessName = null
+EVAL-Application = null
+EVAL-ImagePath = null
+EVAL-ParentProcessName
 
 [TOMB_Signatures_Json]
 
@@ -405,6 +612,36 @@ description = TOMB SchedTask module output
 disabled = false
 
 pulldown_type = true
+# CONVERSIONS TO CIM COMPLIANCE:
+FIELDALIAS-arguments = Arguments AS arguments
+FIELDALIAS-author = Author AS author
+FIELDALIAS-command_line = Command AS command_line
+FIELDALIAS-description = Description AS description
+FIELDALIAS-last_result = LastResult AS last_result
+FIELDALIAS-last_run_time = LastRunTime AS last_run_time
+FIELDALIAS-process_name = Name AS process_name
+FIELDALIAS-next_run = NextRun AS next_run
+FIELDALIAS-computer_name = PSComputerName AS computer_name
+FIELDALIAS-file_path = Path AS file_path
+FIELDALIAS-subject_user = RunAsUser AS subject_user
+FIELDALIAS-workstation = Server AS workstation
+FIELDALIAS-status = Status AS status
+# SET ORIGINAL VALUES TO NULL, REMOVES NON CIM COMPLIANCE
+EVAL-Arguments = null
+EVAL-Author = null
+EVAL-Command = null
+EVAL-Description = null
+EVAL-LastResult = null
+EVAL-LastRunTime = null
+EVAL-Name = null
+EVAL-NextRun = null
+EVAL-PSComputerName = null
+EVAL-Path = null
+EVAL-RunAsUser = null
+EVAL-Server = null
+EVAL-Status = null
+
+
 
 
 
