--- a/includes/SplunkSetup/inputs_temp.conf
+++ b/includes/SplunkSetup/inputs_temp.conf
@@ -4,7 +4,7 @@ host = <HOSTNAME>
 
 
 
-[batch://<FILEPATH>\tomb\files2forward\events\*.json]
+[batch://<FILEPATH>\files2forward\events\*.json]
 
 disabled = 0
 
@@ -12,13 +12,13 @@ move_policy = sinkhole
 
 index = TOMB
 
-sourcetype = TOMB-EventLog-Json
+sourcetype = TOMB_EventLog_Json
 
 initCrcLength = 2000
 
 
 
-[batch://<FILEPATH>\tomb\files2forward\process\*.json]
+[batch://<FILEPATH>\files2forward\process\*.json]
 
 disabled = 0
 
@@ -26,13 +26,13 @@ move_policy = sinkhole
 
 index = TOMB
 
-sourcetype = TOMB-Process-Json
+sourcetype = TOMB_Process_Json
 
 initCrcLength = 2000
 
 
 
-[batch://<FILEPATH>\tomb\files2forward\service\*.json]
+[batch://<FILEPATH>\files2forward\service\*.json]
 
 disabled = 0
 
@@ -40,13 +40,13 @@ move_policy = sinkhole
 
 index = TOMB
 
-sourcetype = TOMB-Service-Json
+sourcetype = TOMB_Service_Json
 
 initCrcLength = 2000
 
 
 
-[batch://<FILEPATH>\tomb\files2forward\signatures\*.json]
+[batch://<FILEPATH>\files2forward\signature\*.json]
 
 disabled = 0
 
@@ -54,13 +54,13 @@ move_policy = sinkhole
 
 index = TOMB
 
-sourcetype = TOMB-Service-Json
+sourcetype = TOMB_Signatures_Json
 
 initCrcLength = 2000
 
 
 
-[batch://<FILEPATH>\tomb\files2forward\schedtask\*.json]
+[batch://<FILEPATH>\files2forward\schedtask\*.json]
 
 disabled = 0
 
@@ -68,12 +68,12 @@ move_policy = sinkhole
 
 index = TOMB
 
-sourcetype = TOMB-SchedTask-Json
+sourcetype = TOMB_SchedTask_Json
 
 initCrcLength = 2000
 
 
-[batch://<FILEPATH>\tomb\files2forward\registry\*.json]
+[batch://<FILEPATH>\files2forward\registry\*.json]
 
 disabled = 0
 
@@ -81,6 +81,6 @@ move_policy = sinkhole
 
 index = TOMB
 
-sourcetype = TOMB-Registry-Json
+sourcetype = TOMB_Registry_Json
 
 initCrcLength = 2000
