--- a/includes/SplunkSetup/TA-TOMB/default/props.conf
+++ b/includes/SplunkSetup/TA-TOMB/default/props.conf
@@ -1,25 +1,14 @@
 
 [TOMB_Process_Json]
-
 BREAK_ONLY_BEFORE = ^{
-
 CHARSET = UTF-8
-
 LINE_BREAKER = ^{
-
 NO_BINARY_CHECK = true
-
 SHOULD_LINEMERGE = false
-
 TIME_PREFIX = CreationDate
-
 category = Structured
-
 description = TOMB Process module output
-
 pulldown_type = true
-
-
 # CONVERSIONS TO CIM COMPLIANCE:
 FIELDALIAS-cs_creation_class_name = CSCreationClassName AS cs_creation_class_name
 FIELDALIAS-workstation = CSName AS workstation
@@ -92,28 +81,16 @@ EVAL-ThreadCount = null
 EVAL-WindowsVersion = null
 
 [TOMB_Service_Json]
-
 BREAK_ONLY_BEFORE = ^{
-
 CHARSET = UTF-8
-
 DATETIME_CONFIG = CURRENT
-
 LINE_BREAKER = ^{
-
 NO_BINARY_CHECK = true
-
 SHOULD_LINEMERGE = false
-
 category = Structured
-
 description = TOMB Service module output
-
 disabled = false
-
 pulldown_type = true
-
-
 # FIELD CONVERSIONS TO READABLE VALUES:
 FIELDALIAS-accept_pause = AcceptPause AS accept_pause
 FIELDALIAS-accept_stop = AcceptStop AS accept_stop
@@ -175,226 +152,117 @@ EVAL-TagId = null
 EVAL-WaitHint = null
 
 [TOMB_EventLog_Json]
-
 BREAK_ONLY_BEFORE = ^{
-
 CHARSET = UTF-8
-
 LINE_BREAKER = ^{
-
 NO_BINARY_CHECK = true
-
 SHOULD_LINEMERGE = false
-
 TIME_PREFIX = TimeCreated
-
 category = Structured
-
 description = TOMB EventLog module output
-
 disabled = false
-
 pulldown_type = true
 # CONVERSIONS TO CIM COMPLIANCE:
 FIELDALIAS-event_id = id AS event_id
 FIELDALIAS-access_list = AccessList AS access_list
-
 FIELDALIAS-access_mask = AccessMask AS access_mask
-
 FIELDALIAS-access_right = AccessRight AS access_right
-
 FIELDALIAS-accesses = Accesses AS accesses
-
 FIELDALIAS-account_expires = AccountExpires AS account_expires
-
 FIELDALIAS-account_name = AccountName AS account_name
-
 FIELDALIAS-allowed_logon_hours = LogonHours AS allowed_logon_hours
-
 FIELDALIAS-allowed_to_delegate_to = AllowedToDelegateTo AS allowed_to_delegate_to
-
 FIELDALIAS-app = PackageName AS app
-
 FIELDALIAS-auth_package_name = AuthenticationPackageName AS auth_package_name
-
 FIELDALIAS-command_line = CommandLine AS command_line
-
 FIELDALIAS-computer_name = WorkstationName AS computer_name
-
 FIELDALIAS-create_time = TimeCreated AS create_time
-
 FIELDALIAS-display_name = DisplayName AS display_name
-
 FIELDALIAS-dns_host_name = DnsHostName AS dns_host_name
-
 FIELDALIAS-domain_name = DomainName AS domain_name
-
 FIELDALIAS-domain_sid = DomainSid AS domain_sid
-
 FIELDALIAS-elevated_privilege = ElevatedToken AS elevated_privilege
-
 FIELDALIAS-failure_reason = FailureReason AS failure_reason
-
 FIELDALIAS-group_domain = TargetDomainName AS group_domain
-
 FIELDALIAS-group_name = TargetUserName AS group_name
-
 FIELDALIAS-handle_id = HandleId AS handle_id
-
 FIELDALIAS-home_directory = HomeDirectory AS home_directory
-
 FIELDALIAS-home_drive = HomePath AS home_drive
-
 FIELDALIAS-impersonation_level = ImpersonationLevel AS impersonation_level
-
 FIELDALIAS-key_length = KeyLength AS key_length
-
 FIELDALIAS-level = Level AS level
-
 FIELDALIAS-logon_guid = LogonGuid AS logon_guid
-
 FIELDALIAS-logon_process_name = LogonProcessName AS logon_process_name
-
 FIELDALIAS-logon_status = LogonStatus AS logon_status
-
 FIELDALIAS-logon_type = LogonType AS logon_type
-
 FIELDALIAS-member_name = MemberName AS member_name
-
 FIELDALIAS-member_sid = MemberSid AS member_sid
-
 FIELDALIAS-new_reg_type = NewValueType AS new_reg_type
-
 FIELDALIAS-new_reg_value = NewValue AS new_reg_value
-
 FIELDALIAS-new_security_descriptor = NewSd AS new_security_descriptor
-
 FIELDALIAS-new_uac_value = NewUacValue AS new_uac_value
-
 FIELDALIAS-ntlm_protocol = LmPackageName AS ntlm_protocol
-
 FIELDALIAS-object_name = ObjectName AS object_name
-
 FIELDALIAS-object_server = ObjectServer AS object_server
-
 FIELDALIAS-object_type = ObjectType AS object_type
-
 FIELDALIAS-object_value_name = ObjectValueName AS object_value_name
-
 FIELDALIAS-old_security_descr = OldSd AS old_security_descr
-
 FIELDALIAS-old_uac_value = OldUacValue AS old_uac_value
-
 FIELDALIAS-old_value = OldValue AS old_value
-
 FIELDALIAS-old_value_type = OldValueType AS old_value_type
-
 FIELDALIAS-operation_type = OperationType AS operation_type
-
 FIELDALIAS-parent_file_name = ParentFileName AS parent_file_name
-
 FIELDALIAS-password_last_set = PasswordLastSet AS password_last_set
-
 FIELDALIAS-primary_group_id = PrimaryGroupId AS primary_group_id
 FIELDALIAS-process_status = Status AS process_status
-
 FIELDALIAS-profile_changed = ProfileChanged AS profile_changed
-
 FIELDALIAS-profile_path = ProfilePath AS profile_path
-
 FIELDALIAS-provider_name = ProviderName AS provider_name
-
 FIELDALIAS-record_id = EventRecordID AS record_id
-
 FIELDALIAS-restricted_admin_mode = RestrictedAdminMode AS restricted_admin_mode
-
 FIELDALIAS-rule_id = RuleId AS rule_id
-
 FIELDALIAS-rule_name = RuleName AS rule_name
-
 FIELDALIAS-sam_account_name = SamAccountName AS sam_account_name
-
 FIELDALIAS-scheduled_task_content = TaskContent AS scheduled_task_content
-
 FIELDALIAS-scheduled_task_name = TaskName AS scheduled_task_name
-
 FIELDALIAS-script_path = ScriptPath AS script_path
-
 FIELDALIAS-service_account = ServiceAccount AS service_account
-
 FIELDALIAS-service_file_path = ServiceFileName AS service_file_path
-
 FIELDALIAS-service_name = ServiceName AS service_name
-
 FIELDALIAS-service_principle_names = ServicePrincipleNames AS service_principle_names
-
 FIELDALIAS-service_start_type = ServiceStartType AS service_start_type
-
 FIELDALIAS-service_type = ServiceType AS service_type
-
 FIELDALIAS-share_name = ShareName AS share_name
-
 FIELDALIAS-share_path = ShareLocalPath AS share_path
-
 FIELDALIAS-sid_filtering = SidFilteringEnabled AS sid_filtering
-
 FIELDALIAS-sid_history = SidHistory AS sid_history
-
 FIELDALIAS-src_ip = IpAddress AS src_ip
-
 FIELDALIAS-src_port = IpPort AS src_port
-
 FIELDALIAS-src_workstation = Workstation AS src_workstation
-
 FIELDALIAS-subject_domain = SubjectDomainName AS subject_domain
-
 FIELDALIAS-subject_logon_id = SubjectLogonId AS subject_logon_id
-
 FIELDALIAS-subject_logon_process = SubjectLogonProcess AS subject_logon_process
-
 FIELDALIAS-subject_logon_type = SubjectLogonType AS subject_logon_type
-
 FIELDALIAS-subject_sid = SubjectUserSid AS subject_sid
-
 FIELDALIAS-subject_user = SubjectUserName AS subject_user
-
 FIELDALIAS-target_domain = TargetDomainName AS target_domain
-
 FIELDALIAS-target_linked_logon_id = TargetLinkedLogonId AS target_linked_logon_id
-
 FIELDALIAS-target_logon_id = TargetLogonId AS target_logon_id
-
 FIELDALIAS-target_network_domain = TargetOutboundUserDomain AS target_network_domain
-
 FIELDALIAS-target_network_user = TargetOutboundUserName AS target_network_user
-
 FIELDALIAS-target_sid = TargetSid AS target_sid
-
 FIELDALIAS-target_user = TargetUserName AS target_user
-
 FIELDALIAS-token_elevation_type = TokenElevationType AS token_elevation_type
-
 FIELDALIAS-transmitted_services = TransmittedServices AS transmitted_services
-
 FIELDALIAS-trust_attributes = TdoAttributes AS trust_attributes
-
 FIELDALIAS-trust_direction = TdoDirection AS trust_direction
-
 FIELDALIAS-trust_type = TdoType AS trust_type
-
 FIELDALIAS-user_account_control = UserAccountControl AS user_account_control
-
 FIELDALIAS-user_parameters = UserParameters AS user_parameters
-
 FIELDALIAS-user_principal_name = UserPrincipalName AS user_principal_name
-
 FIELDALIAS-user_rights = PrivilegeList AS user_rights
-
 FIELDALIAS-user_workstations = UserWorkstations AS user_workstations
-
 FIELDALIAS-v_account = VirtualAccount AS v_account
-
-
 FIELDALIAS-file_name = ProcessName AS file_name
 FIELDALIAS-new_file_name = NewProcessName AS file_name
 FIELDALIAS-caller_file_name = CallerProcessName AS file_name
@@ -404,47 +272,27 @@ FIELDALIAS-parent_file_name = ParentProcessName AS parent_file_name
 FIELDALIAS-parent_file_path = ParentProcessName AS parent_process_path
 # FIELD CONVERSIONS TO READABLE VALUES:
 EVAL-auth_level = if (EventID==5712, param12, null())
-
 EVAL-auth_service = if (EventID==5712, param11, null())
-
 EVAL-auth_status = if (EventID==4776, Status, null())
-
 EVAL-install_type = if (EventID==7040, param4, null())
-
 EVAL-interface_uuid = if (EventID==5712, param9, null())
-
 EVAL-new_service_start_type = if (EventID==7040, param3, null())
-
 EVAL-parent_process_id = to
 EVAL-printer_name = if (EventID==1107, param1, null())
 EVAL-process_id = tonumber(ProcessId,16)
 EVAL-proto_seq = if (EventID==5712, param10, null())
-
-EV
-AL-remote_ip = if (EventID==5712, param7, null())
-
+EVAL-remote_ip = if (EventID==5712, param7, null())
 EVAL-remote_port = if (EventID==5712, param8, null())
-
 EVAL-subject_name = if (EventID==5712, param2, null())
-
 EVAL-service_state = if (EventID==7036, param2, null())
-
 EVAL-times_repeated = if (EventID==7034, param2, null())
-
 EVAL-user = coalesce(case(EventID==4688,SubjectDomainName + "\\" + SubjectUserName,EventID==4624,TargetDomainName + "\\" + TargetUserName),user)
-
 EVAL-logon_id = coalesce(case(EventID==4688,SubjectLogonId,EventID==4624,TargetLogonId),logon_id)
-
 EVAL-src_ip = coalesce(case(EventID==4624,IpAddress,EventID==5156,SourceAddress),src_ip)
-
 EVAL-src = coalesce(case(EventID==4624,IpAddress,EventID==5156,SourceAddress),src)
-
 EVAL-src_port = coalesce(case(EventID==4624,IpAddress,EventID==5156,SourceAddress),src_port)
-
 EVAL-dest = coalesce(case(EventID==5156,DestAddress),dest)
-
 EVAL-dest_ip = coalesce(case(EventID==5156,DestAddress),dest_ip)
-
 EVAL-dest_port = coalesce(case(EventID==5156,DestPort),dest_port)
 # SET ORIGINAL VALUES TO NULL, REMOVES NON CIM COMPLIANCE
 EVAL-id = null
@@ -551,69 +399,39 @@ EVAL-NewProcessName = null
 EVAL-CallerProcessName = null
 EVAL-Application = null
 EVAL-ImagePath = null
-EVAL-ParentProcessName
-
+
 [TOMB_Signatures_Json]
-
 BREAK_ONLY_BEFORE = ^{
-
 CHARSET = UTF-8
-
 DATETIME_CONFIG = CURRENT
-
 LINE_BREAKER = ([\r\n]+)
-
 NO_BINARY_CHECK = true
-
 SHOULD_LINEMERGE = false
-
 category = Structured
-
 description = TOMB Signatures module output
-
 disabled = false
-
 pulldown_type = true
 EXTRACT-file_name = ^[^:\n]*:\s+(?P<file_name>[^,]+)
-
 EXTRACT-signature = ^(?:[^ \n]* ){4}(?P<signature>[^,]+)
-
 EXTRACT-vendor = ^(?:[^ \n]* ){6}(?P<vendor>[^,]+)
-
 EXTRACT-status = ^(?:[^ \n]* ){9}(?P<status>[^,]+)
-EXTRACT-sha1 = 
-^(?:[^:\n]*:){6}\s+(?P<sha1>[^,]+)
-
+EXTRACT-sha1 = ^(?:[^:\n]*:){6}\s+(?P<sha1>[^,]+)
 EXTRACT-md5 = ^(?:[^:\n]*:){7}\s+(?P<md5>[^,]+)
-
 EXTRACT-file_version = ^(?:[^:\n]*:){8}\s+(?P<file_version>\d+\.\d+\.\d+\.\d+\s+\(\w+\d+_\w+\.\d+\-\d+\))
 
-
-
-
 [TOMB_SchedTask_Json]
-
 BREAK_ONLY_BEFORE = ^{
-
 CHARSET = UTF-8
-
 DATETIME_CONFIG = CURRENT
-
 LINE_BREAKER = ([\r\n]+)
-
 NO_BINARY_CHECK = true
-
 SHOULD_LINEMERGE = false
-
 category = Structured
-
 description = TOMB SchedTask module output
-
 disabled = false
-
 pulldown_type = true
-# CONVERSIONS TO CIM COMPLIANCE:
-FIELDALIAS-arguments = Arguments AS arguments
+# CONVERSIONS TO CIM COMPLIANCE:
+FIELDALIAS-arguments = Arguments AS arguments
 FIELDALIAS-author = Author AS author
 FIELDALIAS-command_line = Command AS command_line
 FIELDALIAS-description = Description AS description
@@ -641,28 +459,14 @@ EVAL-RunAsUser = null
 EVAL-Server = null
 EVAL-Status = null
 
-
-
-
-
 [TOMB_Registry_Json]
-
 BREAK_ONLY_BEFORE = ^{
-
 CHARSET = UTF-8
-
 DATETIME_CONFIG = CURRENT
-
 LINE_BREAKER = ([\r\n]+)
-
 NO_BINARY_CHECK = true
-
 SHOULD_LINEMERGE = false
-
 category = Structured
-
 description = TOMB Registry module output
-
 disabled = false
-
 pulldown_type = true
