--- a/includes/SplunkSetup/inputs_temp.conf
+++ b/includes/SplunkSetup/inputs_temp.conf
@@ -31,6 +31,7 @@ sourcetype = TOMB_Process_Json
 initCrcLength = 2000
 
 
+crcSalt = <SOURCE>
 
 [batch://<FILEPATH>\files2forward\service\*.json]
 
@@ -43,6 +44,7 @@ index = TOMB
 sourcetype = TOMB_Service_Json
 
 initCrcLength = 2000
+crcSalt = <SOURCE>
 
 
 
@@ -57,6 +59,7 @@ index = TOMB
 sourcetype = TOMB_Signatures_Json
 
 initCrcLength = 2000
+crcSalt = <SOURCE>
 
 
 
@@ -71,6 +74,7 @@ index = TOMB
 sourcetype = TOMB_SchedTask_Json
 
 initCrcLength = 2000
+crcSalt = <SOURCE>
 
 
 [batch://<FILEPATH>\files2forward\registry\*.json]
@@ -84,3 +88,4 @@ index = TOMB
 sourcetype = TOMB_Registry_Json
 
 initCrcLength = 2000
+crcSalt = <SOURCE>
